Refactor application to use MongoDB instead of H2 for data storage
- Updated deployment and usage guides to reflect MongoDB integration.
- Removed H2 database dependencies and configurations from the project.
- Added MongoDB setup scripts and instructions for Atlas and local installations.
- Modified entity classes to use MongoDB annotations and repositories.
- Implemented necessary indexes for MongoDB collections to optimize performance.
- Adjusted application properties for MongoDB connection settings.
- Updated service and repository layers to handle MongoDB operations.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,18 @@
 spring.application.name=GainsightApp
 
-# Database Configuration (H2 for development)
-spring.datasource.url=jdbc:h2:mem:gainsightdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# MongoDB Configuration (MongoDB Atlas - Recommended)
+# Replace the placeholders with your actual MongoDB Atlas credentials
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME:gainsight_user}:${MONGO_PASSWORD:password}@${MONGO_CLUSTER:localhost}/gainsightdb?retryWrites=true&w=majority&maxPoolSize=20&minPoolSize=5
+spring.data.mongodb.database=gainsightdb
 
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console (for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Alternative local MongoDB configuration
+# Uncomment and modify these lines if using local MongoDB instead of Atlas
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.database=gainsightdb
+# spring.data.mongodb.username=gainsight_user
+# spring.data.mongodb.password=password
+# spring.data.mongodb.authentication-database=admin
 
 # Default Gainsight PX Configuration (can be overridden per tenant)
 gainsight.px.api-url=https://api.aptrinsic.com
@@ -23,6 +21,7 @@ gainsight.px.api-key=b541b4d7-d08d-4446-821f-adfa26c6a032
 # Logging Configuration
 logging.level.org.example.gainsightapp=INFO
 logging.level.org.springframework.retry=DEBUG
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 
 # Jackson Configuration
 spring.jackson.serialization.write-dates-as-timestamps=false
