Enhance security by updating MongoDB connection strings to use environment variables and adding a security guidelines document

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Security - Never commit sensitive configuration ###
+.env
+application-local.properties
+application-*.properties
+**/secrets/
+**/*secret*
+**/*credential*
+**/*password*
