--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=GainsightApp
 
 # MongoDB Configuration (MongoDB Atlas - Recommended)
 # Replace the placeholders with your actual MongoDB Atlas credentials
-spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME:gainsight_user}:${MONGO_PASSWORD:password}@${MONGO_CLUSTER:localhost}/gainsightdb?retryWrites=true&w=majority&maxPoolSize=20&minPoolSize=5
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME:your_username}:${MONGO_PASSWORD:your_password}@${MONGO_CLUSTER:your_cluster}/gainsightdb?retryWrites=true&w=majority&maxPoolSize=20&minPoolSize=5
 spring.data.mongodb.database=gainsightdb
 
 # Alternative local MongoDB configuration
@@ -10,13 +10,13 @@ spring.data.mongodb.database=gainsightdb
 # spring.data.mongodb.host=localhost
 # spring.data.mongodb.port=27017
 # spring.data.mongodb.database=gainsightdb
-# spring.data.mongodb.username=gainsight_user
-# spring.data.mongodb.password=password
+# spring.data.mongodb.username=your_username
+# spring.data.mongodb.password=your_password
 # spring.data.mongodb.authentication-database=admin
 
 # Default Gainsight PX Configuration (can be overridden per tenant)
 gainsight.px.api-url=https://api.aptrinsic.com
-gainsight.px.api-key=b541b4d7-d08d-4446-821f-adfa26c6a032
+gainsight.px.api-key=${GAINSIGHT_API_KEY:your_api_key}
 
 # Logging Configuration
 logging.level.org.example.gainsightapp=INFO
