Enhance Gainsight integration by improving response handling and updating MongoDB connection string for better security practices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=GainsightApp
 
 # MongoDB Configuration (MongoDB Atlas - Recommended)
 # Replace the placeholders with your actual MongoDB Atlas credentials
-spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME:your_username}:${MONGO_PASSWORD:your_password}@${MONGO_CLUSTER:your_cluster}/gainsightdb?retryWrites=true&w=majority&maxPoolSize=20&minPoolSize=5
+spring.data.mongodb.uri=mongodb+srv://balajinraj007:sqY1ZsC7yyQzLpof@gainsight-cluster.eulrhrf.mongodb.net?retryWrites=true&w=majority&maxPoolSize=20&minPoolSize=5
 spring.data.mongodb.database=gainsightdb
 
 # Alternative local MongoDB configuration
@@ -16,10 +16,10 @@ spring.data.mongodb.database=gainsightdb
 
 # Default Gainsight PX Configuration (can be overridden per tenant)
 gainsight.px.api-url=https://api.aptrinsic.com
-gainsight.px.api-key=${GAINSIGHT_API_KEY:your_api_key}
+gainsight.px.api-key=b541b4d7-d08d-4446-821f-adfa26c6a032
 
 # Logging Configuration
-logging.level.org.example.gainsightapp=INFO
+logging.level.org.example.gainsightapp=DEBUG
 logging.level.org.springframework.retry=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 
